--- a/app/src/main/res/layout/view_template_landscape_cnn.xml
+++ b/app/src/main/res/layout/view_template_landscape_cnn.xml
@@ -10,6 +10,8 @@
     <ImageView
         android:id="@+id/ivHeadline"
         android:layout_width="match_parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         android:layout_height="608px"
         android:scaleType="centerCrop"
         android:src="@color/purple_200" />
@@ -43,6 +45,7 @@
             android:layout_width="4dp"
             android:layout_height="0dp"
             android:background="@color/cnn_primary_color"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintBottom_toBottomOf="@+id/tvHeadline"
             app:layout_constraintTop_toTopOf="@+id/tvHeadline" />
 
@@ -54,7 +57,7 @@
 
         <TextView
             android:id="@+id/tvWatermark"
-            style="@style/TextParagraph4.Medium"
+            style="@style/TextParagraph5.Medium"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@color/cnn_primary_color"
@@ -69,7 +72,7 @@
 
         <TextView
             android:id="@+id/tvDescription"
-            style="@style/TextParagraph4"
+            style="@style/TextParagraph5"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:background="@color/black"
