--- a/app/src/main/res/layout/activity_create_headline.xml
+++ b/app/src/main/res/layout/activity_create_headline.xml
@@ -5,20 +5,18 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-
     tools:context=".view.headline.CreateHeadlineActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="50dp"
+        android:background="@color/white"
         android:minHeight="50dp"
+        android:paddingHorizontal="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:paddingHorizontal="16dp"
-        android:background="@color/white"
-        >
+        app:layout_constraintTop_toTopOf="parent">
 
         <ImageButton
             android:id="@+id/btnBack"
@@ -26,37 +24,34 @@
             android:layout_height="24dp"
             android:background="@android:color/transparent"
             android:src="@drawable/ic_arrow_back_black"
-            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
+            style="@style/TextParagraph1.Medium"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            app:layout_constraintStart_toEndOf="@+id/btnBack"
-            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginStart="24dp"
+            android:includeFontPadding="false"
+            android:text="@string/create_headline_title"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/tvPreview"
-            android:text="@string/create_headline_title"
-            style="@style/TextParagraph1.Medium"
-            android:includeFontPadding="false"
-            android:layout_marginStart="24dp"
-            />
+            app:layout_constraintStart_toEndOf="@+id/btnBack"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/tvPreview"
+            style="@style/TextParagraph2.Bold"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:text="@string/preview"
-            style="@style/TextParagraph2.Bold"
-            android:textColor="@color/primary"
-            android:includeFontPadding="false"
             android:layout_marginStart="24dp"
-            />
+            android:includeFontPadding="false"
+            android:text="@string/preview"
+            android:textColor="@color/primary"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
@@ -76,13 +71,12 @@
                 android:id="@+id/containerEditorLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:layout_constraintTop_toTopOf="parent"
+                android:layout_marginBottom="-8dp"
                 android:background="@android:color/black"
                 android:paddingHorizontal="16dp"
                 android:paddingTop="24dp"
                 android:paddingBottom="32dp"
-                android:layout_marginBottom="-8dp"
-                >
+                app:layout_constraintTop_toTopOf="parent">
 
                 <include
                     android:id="@+id/includedLayout"
@@ -93,11 +87,10 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:paddingHorizontal="16dp"
-                android:paddingTop="32dp"
-                android:orientation="vertical"
                 android:background="@drawable/bg_rounded_top_white"
-                >
+                android:orientation="vertical"
+                android:paddingHorizontal="16dp"
+                android:paddingTop="32dp">
 
                 <TextView
                     style="@style/TextParagraph3"
