--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    val PrimaryColor = Color(0xFF0B5AAB)
-    val SoftPrimaryColor = Color(0xFFECF9FF)
-
     <color name="primary">#0B5AAB</color>
+    <color name="primary_dark">#1A2C3F</color>
     <color name="soft_primary">#ECF9FF</color>
     <color name="statusBarColor">#121212</color>
 
