--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,30 +4,70 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ImageView
-        android:id="@+id/ivLogo"
-        android:layout_width="wrap_content"
-        android:layout_height="24dp"
-        android:layout_marginTop="16dp"
-        android:src="@drawable/ic_hnm_logo"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/topView"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        app:layout_constraintTop_toTopOf="parent"
+        android:paddingHorizontal="16dp"
+        >
 
-    <View
-        android:id="@+id/shadowView"
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/app_name"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            style="@style/TextParagraph1.Bold"
+            />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <TextView
+        android:id="@+id/tvHeader"
         android:layout_width="wrap_content"
-        android:layout_height="1dp"
-        android:layout_marginTop="16dp"
-        android:background="@color/black5"
-        app:layout_constraintTop_toBottomOf="@+id/ivLogo" />
+        android:layout_height="wrap_content"
+        android:text="@string/headline_title"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:gravity="center"
+        style="@style/Header5.Bold"
+        android:layout_marginTop="24dp"
+        app:layout_constraintTop_toBottomOf="@+id/topView"
+        />
+
+    <TextView
+        android:id="@+id/tvSubHeader"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/headline_desc"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:gravity="center"
+        style="@style/TextParagraph1"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/tvHeader"
+        />
+
+    <TextView
+        android:id="@+id/tvTitleHistory"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="@string/headline_history"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginStart="16dp"
+        style="@style/Header7.Medium"
+        android:layout_marginTop="24dp"
+        app:layout_constraintTop_toBottomOf="@+id/tvSubHeader"
+        />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvContent"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/shadowView" />
+        app:layout_constraintBottom_toTopOf="@+id/btnCreateHeadline"
+        app:layout_constraintTop_toBottomOf="@+id/tvTitleHistory" />
 
     <LinearLayout
         android:id="@+id/emptyView"
@@ -60,14 +100,16 @@
 
     </LinearLayout>
 
-    <ImageButton
-        android:id="@+id/btnAdd"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_margin="24dp"
-        android:background="@drawable/circle_primary"
-        android:src="@drawable/ic_add_white"
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/btnCreateHeadline"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        style="@style/buttonPrimary"
+        android:text="@string/create_headline"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        android:layout_marginHorizontal="16dp"
+        android:layout_marginBottom="16dp"
+        />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
