--- a/app/src/main/res/layout/activity_preview.xml
+++ b/app/src/main/res/layout/activity_preview.xml
@@ -14,29 +14,22 @@
         android:layout_width="18dp"
         android:layout_height="18dp"
         android:background="@android:color/transparent"
-        android:src="@drawable/ic_close_white"
+        android:src="@drawable/ic_close_circle"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        android:layout_margin="16dp"
+        android:layout_margin="20dp"
         />
 
-    <LinearLayout
-        android:id="@+id/containerEditorLayout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+
+    <ImageView
+        android:id="@+id/ivPreview"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:background="@android:color/black"
-        android:paddingHorizontal="16dp"
-        android:paddingVertical="24dp"
-        >
-
-        <include
-            android:id="@+id/includedLayout"
-            layout="@layout/view_template_landscape_bbc"
-            />
-
-    </LinearLayout>
+        app:layout_constraintBottom_toTopOf="@+id/btnDownload"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        />
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btnDownload"
