--- a/app/src/main/res/layout/view_template_landscape_cnn.xml
+++ b/app/src/main/res/layout/view_template_landscape_cnn.xml
@@ -3,18 +3,22 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/container"
-    android:layout_width="1080px"
+    android:layout_width="match_parent"
     android:layout_height="608px"
     android:background="@color/black6">
 
     <ImageView
         android:id="@+id/ivHeadline"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
+        android:layout_height="608px"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_height="608px"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         android:scaleType="centerCrop"
-        android:src="@color/purple_200" />
+        android:src="@drawable/ic_launcher_background"
+        />
+
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/layoutHeadline"
