--- a/app/src/main/res/layout/activity_template.xml
+++ b/app/src/main/res/layout/activity_template.xml
@@ -7,12 +7,23 @@
     android:layout_height="match_parent"
     tools:context=".view.template.TemplateActivity">
 
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:navigationIcon="@drawable/ic_arrow_back_black"
+        app:title="@string/title_template"
+        app:titleTextAppearance="@style/TextParagraph2.Bold" />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvTemplate"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar"
         />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
