--- a/app/src/main/res/layout/view_template_landscape_bbc.xml
+++ b/app/src/main/res/layout/view_template_landscape_bbc.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/container"
-    android:layout_width="1080px"
+    android:layout_width="match_parent"
     android:layout_height="608px"
     android:background="@color/black6">
 
