--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,7 +22,7 @@
                 android:background="@color/statusBarColor"
                 android:gravity="center"
                 android:orientation="vertical"
-                android:paddingBottom="24dp"
+                android:paddingBottom="36dp"
                 app:layout_constraintTop_toTopOf="parent">
 
                 <androidx.constraintlayout.widget.ConstraintLayout
@@ -38,7 +38,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/app_name"
-                        android:textColor="@color/white"
+                        android:textColor="@color/dark_sky_blue"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
@@ -66,7 +66,7 @@
                     android:layout_marginTop="8dp"
                     android:gravity="center"
                     android:text="@string/headline_desc"
-                    android:textColor="@color/white"
+                    android:textColor="@color/black5"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/tvHeader" />
@@ -75,7 +75,7 @@
 
             <TextView
                 android:id="@+id/tvTitleHistory"
-                style="@style/Header7.Medium"
+                style="@style/Header7"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
