--- a/app/src/main/res/layout/item_headline_history.xml
+++ b/app/src/main/res/layout/item_headline_history.xml
@@ -5,49 +5,35 @@
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_marginHorizontal="16dp"
+    android:layout_marginVertical="8dp"
+    android:background="@drawable/outline_rounded_primary"
     android:paddingHorizontal="16dp"
-    android:paddingVertical="8dp">
-
-    <ImageView
-        android:id="@+id/ivTemplate"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:background="@color/black6"
-        android:scaleType="centerCrop"
-        tools:src="@drawable/img_monkey_hope"
-        />
+    android:paddingVertical="14dp">
 
     <TextView
         android:id="@+id/tvHeadline"
+        style="@style/TextParagraph2.Bold"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/ivTemplate"
-        app:layout_constraintTop_toTopOf="@+id/ivTemplate"
         android:layout_marginEnd="8dp"
-        tools:text="@tools:sample/lorem/random"
-        style="@style/TextParagraph2.Bold"
-        android:maxLines="2"
         android:ellipsize="end"
-        android:layout_marginTop="12dp"
-        />
-
+        android:maxLines="2"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="@tools:sample/lorem/random" />
 
     <TextView
         android:id="@+id/tvDescription"
+        style="@style/TextParagraph3"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="4dp"
+        android:layout_marginEnd="8dp"
+        android:ellipsize="end"
+        android:maxLines="2"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvHeadline"
-        app:layout_constraintEnd_toStartOf="@id/ivTemplate"
-        android:layout_marginEnd="8dp"
-        tools:text="@tools:sample/lorem/random"
-        android:maxLines="2"
-        android:ellipsize="end"
-        style="@style/TextParagraph3"
-        />
-
+        tools:text="@tools:sample/lorem/random" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
