--- a/app/src/main/res/layout/view_template_landscape_bbc.xml
+++ b/app/src/main/res/layout/view_template_landscape_bbc.xml
@@ -11,7 +11,9 @@
         android:id="@+id/ivHeadline"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:scaleType="centerCrop" />
+        android:scaleType="centerCrop"
+        android:src="@color/black6"
+        />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -23,7 +25,7 @@
         <TextView
             android:id="@+id/tvHeadline"
             style="@style/Header7.Bold"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:background="@color/cnn_primary_color"
             android:fontFamily="@font/times_new_roman_bold"
@@ -31,7 +33,9 @@
             android:paddingHorizontal="10dp"
             android:paddingVertical="8dp"
             android:textColor="@color/white"
+            android:maxLines="1"
             app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             tools:text="Penembakan Di Masjid Selandia Baru" />
 
@@ -48,9 +52,9 @@
             android:layout_height="wrap_content"
             android:background="@color/black"
             android:includeFontPadding="false"
-            android:paddingHorizontal="12dp"
+            android:paddingHorizontal="6dp"
             android:paddingVertical="4dp"
-            android:text="@string/headline"
+            android:text="@string/breaking_news"
             android:textAllCaps="true"
             android:textColor="@color/white"
             app:layout_constraintStart_toStartOf="parent"
