--- a/app/src/main/res/layout/view_template_landscape_bbc.xml
+++ b/app/src/main/res/layout/view_template_landscape_bbc.xml
@@ -9,8 +9,12 @@
 
     <ImageView
         android:id="@+id/ivHeadline"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="0dp"
+        android:layout_height="608px"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         android:scaleType="centerCrop"
         android:src="@color/black6"
         />
@@ -20,6 +24,8 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="8dp"
         android:layout_marginBottom="8dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent">
 
         <TextView
