--- a/app/src/main/res/layout/item_template_design.xml
+++ b/app/src/main/res/layout/item_template_design.xml
@@ -2,13 +2,17 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_marginHorizontal="16dp"
     android:layout_marginVertical="8dp">
 
     <ViewStub
         android:id="@+id/viewStub"
         android:layout_width="0dp"
-        android:layout_height="200dp"
-        android:visibility="visible" />
+        android:layout_height="wrap_content"
+        android:visibility="visible"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
