--- a/app/src/main/res/layout/view_template_landscape_bbc_2.xml
+++ b/app/src/main/res/layout/view_template_landscape_bbc_2.xml
@@ -4,29 +4,51 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/container"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="608px"
     android:background="@color/black6">
 
     <ImageView
         android:id="@+id/ivHeadline"
         android:layout_width="0dp"
         android:layout_height="608px"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         android:scaleType="centerCrop"
         android:src="@drawable/img_truck"
-        />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/layoutHeadline"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="8dp"
         android:layout_marginBottom="8dp"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent">
+        app:layout_constraintStart_toStartOf="parent">
+
+        <TextView
+            android:id="@+id/tvWatermark"
+            style="@style/TextParagraph4.Medium"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:background="@color/white"
+            android:includeFontPadding="false"
+            android:paddingHorizontal="16dp"
+            android:paddingVertical="1dp"
+            android:text="@string/breaking_news"
+            android:textAllCaps="true"
+            android:textColor="@color/cnn_primary_color"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <Space
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            app:layout_constraintStart_toEndOf="@+id/tvWatermark"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            />
 
         <TextView
             android:id="@+id/tvHeadline"
@@ -36,39 +58,17 @@
             android:background="@color/cnn_primary_color"
             android:fontFamily="@font/times_new_roman_bold"
             android:includeFontPadding="false"
-            android:paddingHorizontal="10dp"
+            android:paddingHorizontal="16dp"
             android:paddingVertical="8dp"
             android:textColor="@color/white"
-            android:maxLines="1"
-            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:text="@string/your_headline_text_here" />
-
-        <View
-            android:id="@+id/spacer"
-            android:layout_width="match_parent"
-            android:layout_height="2dp"
-            app:layout_constraintTop_toBottomOf="@+id/tvHeadline" />
-
-        <TextView
-            android:id="@+id/tvWatermark"
-            style="@style/TextParagraph5.Medium"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:background="@color/black"
-            android:includeFontPadding="false"
-            android:paddingHorizontal="6dp"
-            android:paddingVertical="4dp"
-            android:text="@string/breaking_news"
-            android:textAllCaps="true"
-            android:textColor="@color/white"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/spacer" />
+            app:layout_constraintTop_toBottomOf="@+id/tvWatermark"
+            tools:text="@string/your_headline_text_here" />
 
         <TextView
             android:id="@+id/tvDescription"
-            style="@style/TextParagraph4"
+            style="@style/TextParagraph5"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:background="@color/white"
@@ -77,10 +77,10 @@
             android:maxLines="1"
             android:paddingHorizontal="8dp"
             android:paddingVertical="4dp"
-            android:textColor="@color/black1"
+            android:textColor="@color/black"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/tvWatermark"
-            app:layout_constraintTop_toBottomOf="@+id/spacer"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tvHeadline"
             tools:text="@tools:sample/lorem/random" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
