create : template potrait

--- a/app/src/main/res/layout/view_template_potrait_2.xml
+++ b/app/src/main/res/layout/view_template_potrait_2.xml
@@ -12,20 +12,20 @@
         android:layout_width="0dp"
         android:layout_height="1350px"
         android:scaleType="centerCrop"
-        android:src="@drawable/img_monkey_hope"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:src="@drawable/img_monkey_hope" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/layoutHeadline"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:background="@drawable/gradient_black_to_transparent"
-        android:paddingHorizontal="24dp"
         android:paddingTop="24dp"
         android:paddingBottom="30dp"
+        android:paddingHorizontal="24dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent">
@@ -35,7 +35,7 @@
             style="@style/TextParagraph4.Medium"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:background="@color/cnn_primary_color"
+            android:background="@color/primary"
             android:includeFontPadding="false"
             android:paddingHorizontal="18dp"
             android:paddingVertical="2dp"
@@ -58,11 +58,11 @@
             style="@style/Header7.Bold"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:ellipsize="end"
             android:includeFontPadding="false"
             android:maxLines="3"
             android:paddingVertical="8dp"
             android:textColor="@color/white"
+            android:ellipsize="end"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tvWatermark"
