create : empty data view

--- a/app/src/main/res/layout/view_empty.xml
+++ b/app/src/main/res/layout/view_empty.xml
@@ -4,8 +4,9 @@
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:gravity="center"
+    android:id="@+id/container"
+    android:visibility="visible"
     >
-
 
     <TextView
         style="@style/TextParagraph1.Bold"
