--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -94,6 +94,14 @@
                 tools:itemCount="3"
                 tools:listitem="@layout/item_headline_history" />
 
+            <include
+                android:id="@+id/emptyView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="64dp"
+                layout="@layout/view_empty"
+                app:layout_constraintTop_toBottomOf="@+id/tvTitleHistory"
+                />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
